--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures{
+        dataBinding = true
+    }
 }
 
 dependencies {
@@ -44,4 +48,8 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0' //retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0' //retrofit converter
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+
 }
